<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/share_image"
            android:textColor="#ff6600"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/share_imageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/imageview"
            android:padding="5dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/select_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/select_image" />

            <Button
                android:id="@+id/share_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/share_image"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/share_text"
            android:textColor="#ff6600"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_text"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#d3d3d3"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnTextShare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/share_image" />
    </LinearLayout>

</ScrollView>